# clinical-llm-evals

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
docs/: ARCHITECTURE.md  EVAL_TAXONOMY.md  REPORT_FORMATS.md
evals/drug_interactions/: maoi_ssri_washout.yaml  methotrexate_tmpsmx.yaml  qt_prolongation_ondansetron.yaml  statin_grapefruit.yaml  warfarin_nsaid.yaml
evals/fhir_parsing/: bundle_integrity.yaml  extract_patient_identifier.yaml  missing_optional_field.yaml  observation_reference_range.yaml  parse_medication_request.yaml
evals/immunization_recommendations/: healthcare_worker_hbv_exposure.yaml  hiv_live_attenuated.yaml  splenectomy_meningococcal.yaml  tdap_pregnancy.yaml  travel_yellow_fever.yaml
evals/triage/: chest_pain_heart_score.yaml  ectopic_pregnancy_red_flags.yaml  pediatric_fever_under_90_days.yaml  sepsis_hour_1_bundle.yaml  stroke_window.yaml
evals/vaccine_scheduling/: asplenia_laiv_contraindication.yaml  hpv_catchup_age.yaml  ivig_mmr_deferral.yaml  live_vaccine_post_hsct.yaml  rituximab_timing.yaml
src/clinical_llm_evals/: __init__.py  core.py  diff.py  llm.py  registry.py  report.py  run.py  scoring.py
tests/: conftest.py  test_async.py  test_cli.py  test_core.py  test_diff.py  test_eval_schema.py  test_mock_runner.py  test_registry.py  test_report.py  test_scoring.py
